fix(#1592): Fix compiler warnings in all runtime modules
Eliminates all compiler warnings across runtime modules:
citrus-main, citrus-junit, citrus-junit-jupiter, citrus-yaml,
citrus-xml, citrus-testng, citrus-groovy, citrus-cucumber.

- Suppress deprecation for third-party deprecated APIs (Spring JUnit4,
  JUnit Jupiter Store, Cucumber JUnit4, Cucumber SummaryPrinter)
- Replace deprecated Class.newInstance() with getDeclaredConstructor()
- Suppress unchecked casts and deprecated-for-removal API usage
- Remove @return tags from void method Javadocs

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>